syntax = "proto3";

package chat;

option go_package = "internal/proto_gen/chat;chat";

message AddUserRequest {
    uint64 channel_id = 1;
    uint64 user_id = 2;
}

message AddUserResponse {
}

service UserService {
    rpc AddUserToChannel(AddUserRequest) returns (AddUserResponse) {};
}